--- a/analysis/report_templates/default.html
+++ b/analysis/report_templates/default.html
@@ -188,12 +188,18 @@
             </div>
             <div class="row">
                 <div class="col s12">
-                    <ul class="tabs">
+                    <ul class="tabs" style="height:144px">
             {% if benchmark.type == 'bug' %}
                       <li class="tab col s3"><a href="#{{ benchmark.name }}_bugs_normal" class="green-text text-darken-3">Bug coverage (linear)</a></li>
                       <li class="tab col s3"><a href="#{{ benchmark.name }}_bugs_logscale" class="green-text text-darken-3">Bug coverage (log)</a></li>
                       <li class="tab col s3"><a href="#{{ benchmark.name }}_code_normal" class="green-text text-darken-3">Code coverage (linear)</a></li>
                       <li class="tab col s3"><a href="#{{ benchmark.name }}_code_logscale" class="green-text text-darken-3">Code coverage (log)</a></li>
+                      <li class="tab col s3"><a href="#{{ benchmark.name }}_FR_reach_normal" class="green-text text-darken-3">FR Reach (linear)</a></li>
+                      <li class="tab col s3"><a href="#{{ benchmark.name }}_FR_reach_logscale" class="green-text text-darken-3">FR Reach (log)</a></li>
+                      <li class="tab col s3"><a href="#{{ benchmark.name }}_FR_trigger_normal" class="green-text text-darken-3">FR Trigger (linear)</a></li>
+                      <li class="tab col s3"><a href="#{{ benchmark.name }}_FR_trigger_logscale" class="green-text text-darken-3">FR trigger (log)</a></li>
+                      <li class="tab col s3"><a href="#{{ benchmark.name }}_FR_crash_normal" class="green-text text-darken-3">FR Crash (linear)</a></li>
+                      <li class="tab col s3"><a href="#{{ benchmark.name }}_FR_crash_logscale" class="green-text text-darken-3">FR Crash (log)</a></li>
             {% else %}
                       <li class="tab col s6"><a href="#{{ benchmark.name }}_code_normal" class="green-text text-darken-3">Code coverage (linear)</a></li>
                       <li class="tab col s6"><a href="#{{ benchmark.name }}_code_logscale" class="green-text text-darken-3">Code coverage (log)</a></li>
@@ -220,6 +226,36 @@
                     <h5 class="center-align">Mean bug coverage growth over time</h5>
                     <img class="responsive-img materialboxed"
                          src="{{ benchmark.bug_coverage_growth_plot_logscale }}">
+                </div>
+                <div id="{{ benchmark.name }}_FR_reach_normal" class="col s12">
+                    <h5 class="center-align">Mean reach coverage growth over time</h5>
+                    <img class="responsive-img materialboxed"
+                         src="{{ benchmark.fixreverter_reach_coverage_growth_plot }}">
+                </div>
+                <div id="{{ benchmark.name }}_FR_reach_logscale" class="col s12">
+                    <h5 class="center-align">Mean reach coverage growth over time</h5>
+                    <img class="responsive-img materialboxed"
+                         src="{{ benchmark.fixreverter_reach_coverage_growth_plot_logscale }}">
+                </div>
+                <div id="{{ benchmark.name }}_FR_trigger_normal" class="col s12">
+                    <h5 class="center-align">Mean trigger coverage growth over time</h5>
+                    <img class="responsive-img materialboxed"
+                         src="{{ benchmark.fixreverter_trigger_coverage_growth_plot }}">
+                </div>
+                <div id="{{ benchmark.name }}_FR_trigger_logscale" class="col s12">
+                    <h5 class="center-align">Mean trigger coverage growth over time</h5>
+                    <img class="responsive-img materialboxed"
+                         src="{{ benchmark.fixreverter_trigger_coverage_growth_plot_logscale }}">
+                </div>
+                <div id="{{ benchmark.name }}_FR_crash_normal" class="col s12">
+                    <h5 class="center-align">Mean trigger coverage growth over time</h5>
+                    <img class="responsive-img materialboxed"
+                         src="{{ benchmark.fixreverter_trigger_coverage_growth_plot_logscale }}">
+                </div>
+                <div id="{{ benchmark.name }}_FR_crash_logscale" class="col s12">
+                    <h5 class="center-align">Mean trigger coverage growth over time</h5>
+                    <img class="responsive-img materialboxed"
+                         src="{{ benchmark.fixreverter_trigger_coverage_growth_plot_logscale }}">
                 </div>
             {% endif %}
                 <div class="center-align">
